...
                    Helium.shared.presentPaywall(
                        trigger: trigger, config: PaywallPresentationConfig(dontShowIfAlreadyEntitled: dontShowIfAlreadyEntitled)
                    ) { reason in
                        print("[Helium Example] show paywall - Could not show paywall. \(reason)")
                    }
                }
                .accessibilityIdentifier("presentPaywall")

                Button("show via modifier") {
                    showModifierPaywall = true
                }
                .accessibilityIdentifier("showPaywallViaModifier")
                .heliumPaywall(
                    isPresented: $showModifierPaywall,
                    trigger: trigger,
                    config: PaywallPresentationConfig(dontShowIfAlreadyEntitled: dontShowIfAlreadyEntitled)
                ) { reason in
                    Text("no show! \(reason.description)")
...
