...
                    Helium.shared.handleURL(url)
                }
        }
    }
    
    private func configureHelium() {
        let loadStateTestTrigger = ProcessInfo.processInfo.environment["LOAD_STATE_TEST_TRIGGER"]
        let fallbackTestMode = ProcessInfo.processInfo.environment["FALLBACK_TEST_MODE"]
        preInitializeTestSetup(loadStateTestTrigger: loadStateTestTrigger, fallbackTestMode: fallbackTestMode)
        
        let apiKey: String = if fallbackTestMode == FallbackTestMode.downloadFailure.rawValue {
            "invalid_api_key_for_testing"
        } else {
...
